<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_popular">

    <fragment
        android:id="@+id/navigation_popular"
        android:name="com.arjun.moviesbox.ui.popularMovies.PopularMoviesFragment"
        android:label="@string/popular"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_top_rated"
        android:name="com.arjun.moviesbox.ui.topRatedMovies.TopRatedMoviesFragment"
        android:label="@string/top_rated"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.arjun.moviesbox.ui.upcomingMovies.UpcomingMoviesFragment"
        android:label="@string/upcoming"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_now_playing"
        android:name="com.arjun.moviesbox.ui.nowPlayingMovies.NowPlayingMoviesFragment"
        android:label="@string/now_playing"
        tools:layout="@layout/now_playing_movies_fragment" />

    <fragment
        android:id="@+id/navigation_trending"
        android:name="com.arjun.moviesbox.ui.trending.TrendingFragment"
        android:label="@string/trending"
        tools:layout="@layout/trending_fragment" />

</navigation>