<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?selectableItemBackgroundBorderless">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:contentDescription="@string/poster_content"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageView"
            tools:src="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_banner"
            style="@style/BannerCardView"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:alpha="0.9"
            app:cardBackgroundColor="@android:color/white"
            app:cardElevation="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:nestedScrollingEnabled="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_star"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/icStar"
                    android:src="@drawable/ic_star" />

                <TextView
                    android:id="@+id/rating_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    tools:text="@string/rating_ex" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movie_poster"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster"
            tools:text="@string/movie_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>


